@@ -1,93 +1,233 @@
 package com.medtrack.exception;
 
+import jakarta.persistence.OptimisticLockException;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.slf4j.MDC;
 import org.springframework.core.MethodParameter;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.http.HttpInputMessage;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.mock.web.MockHttpServletRequest;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
+import org.springframework.web.HttpMediaTypeNotSupportedException;
+import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.MissingServletRequestParameterException;
+import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 
-import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 /**
- * Unit tests for {@link GlobalExceptionHandler} to ensure all captured exceptions return correct HTTP statuses and structured payloads.
+ * Verifies that client mistakes keep useful 4xx responses while unexpected backend failures are
+ * classified as 500 and never disclose their exception messages.
  */
 @ExtendWith(MockitoExtension.class)
-public class GlobalExceptionHandlerTest {
+class GlobalExceptionHandlerTest {
 
-    @InjectMocks
-    private GlobalExceptionHandler globalExceptionHandler;
+    private static final String CORRELATION_ID = "error-test-correlation-id";
 
-    // Helper method to extract a real MethodParameter via reflection
-    public void dummyMethod(String dummy) {}
+    private GlobalExceptionHandler handler;
+    private MockHttpServletRequest request;
+
+    @BeforeEach
+    void setUp() {
+        handler = new GlobalExceptionHandler();
+        request = new MockHttpServletRequest("POST", "/api/equipment/42");
+        MDC.put("correlationId", CORRELATION_ID);
+    }
+
+    @AfterEach
+    void tearDown() {
+        MDC.clear();
+    }
+
+    public void dummyMethod(String dummy) {
+    }
 
     @Test
-    void handleValidationExceptions_Success() throws NoSuchMethodException {
+    void validationErrorsRemainFieldAddressableAndKeepFirstMessage() throws NoSuchMethodException {
         BindingResult bindingResult = mock(BindingResult.class);
-        FieldError fieldError = new FieldError("registerRequest", "email", "Email must be valid");
-        when(bindingResult.getFieldErrors()).thenReturn(Collections.singletonList(fieldError));
+        when(bindingResult.getFieldErrors()).thenReturn(List.of(
+                new FieldError("equipment", "name", "Name is required"),
+                new FieldError("equipment", "name", "Name is too short"),
+                new FieldError("equipment", "quantity", "Quantity must be positive")));
+        MethodParameter parameter = new MethodParameter(
+                GlobalExceptionHandlerTest.class.getMethod("dummyMethod", String.class), 0);
 
-        java.lang.reflect.Method method = GlobalExceptionHandlerTest.class.getMethod("dummyMethod", String.class);
-        MethodParameter methodParameter = new MethodParameter(method, 0);
+        ResponseEntity<ValidationErrorResponse> response = handler.handleValidationExceptions(
+                new MethodArgumentNotValidException(parameter, bindingResult));
 
-        MethodArgumentNotValidException ex = new MethodArgumentNotValidException(
-                methodParameter,
-                bindingResult
-        );
-
-        ResponseEntity<ValidationErrorResponse> response = globalExceptionHandler.handleValidationExceptions(ex);
-
-        assertNotNull(response);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         assertNotNull(response.getBody());
         assertEquals("Validation failed", response.getBody().getMessage());
-        assertEquals("Email must be valid", response.getBody().getErrors().get("email"));
+        assertEquals("Name is required", response.getBody().getErrors().get("name"));
+        assertEquals("Quantity must be positive", response.getBody().getErrors().get("quantity"));
     }
 
     @Test
-    void handleBadCredentials_Success() {
-        BadCredentialsException ex = new BadCredentialsException("Invalid username or password");
+    void badCredentialsRemainUnauthorizedWithCompatibleMessage() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleBadCredentials(
+                new BadCredentialsException("Invalid credentials"), request);
 
-        ResponseEntity<Map<String, String>> response = globalExceptionHandler.handleBadCredentials(ex);
-
-        assertNotNull(response);
-        assertEquals(HttpStatus.UNAUTHORIZED, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertEquals("Invalid username or password", response.getBody().get("message"));
+        assertError(response, HttpStatus.UNAUTHORIZED, "Invalid credentials");
     }
 
     @Test
-    void handleRuntimeException_Success() {
-        RuntimeException ex = new RuntimeException("Something went wrong");
+    void resourceNotFoundRemainsNotFound() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleResourceNotFound(
+                new ResourceNotFoundException("Equipment not found"), request);
 
-        ResponseEntity<Map<String, String>> response = globalExceptionHandler.handleRuntimeException(ex);
-
-        assertNotNull(response);
-        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertEquals("Something went wrong", response.getBody().get("message"));
+        assertError(response, HttpStatus.NOT_FOUND, "Equipment not found");
     }
 
     @Test
-    void handleGeneralException_Success() {
-        Exception ex = new Exception("General internal error");
+    void accessDeniedDoesNotExposeSecurityExceptionDetail() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleAccessDenied(
+                new AccessDeniedException("Missing privileged authority ROLE_HOSPITAL"), request);
 
-        ResponseEntity<Map<String, String>> response = globalExceptionHandler.handleGeneralException(ex);
+        assertError(response, HttpStatus.FORBIDDEN, "Access denied");
+        assertFalse(response.getBody().getMessage().contains("ROLE_HOSPITAL"));
+    }
 
-        assertNotNull(response);
+    @Test
+    void illegalArgumentsRemainBadRequests() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleIllegalArgument(
+                new IllegalArgumentException("Quantity must be positive"), request);
+
+        assertError(response, HttpStatus.BAD_REQUEST, "Quantity must be positive");
+    }
+
+    @Test
+    void businessStateRejectionsKeepExistingBadRequestContract() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleIllegalState(
+                new IllegalStateException("Completed work order cannot be reopened"), request);
+
+        assertError(response, HttpStatus.BAD_REQUEST, "Completed work order cannot be reopened");
+    }
+
+    @Test
+    void malformedJsonIsAClientErrorWithoutParserDetails() {
+        HttpMessageNotReadableException exception = new HttpMessageNotReadableException(
+                "JSON parse error: Cannot deserialize internal.model.Secret", mock(HttpInputMessage.class));
+
+        ResponseEntity<ApiErrorResponse> response = handler.handleUnreadableMessage(exception, request);
+
+        assertError(response, HttpStatus.BAD_REQUEST, "Malformed JSON request");
+        assertFalse(response.getBody().getMessage().contains("internal.model.Secret"));
+    }
+
+    @Test
+    void missingRequestParameterNamesThePublicParameter() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleMissingParameter(
+                new MissingServletRequestParameterException("keepId", "Long"), request);
+
+        assertError(response, HttpStatus.BAD_REQUEST, "Missing required parameter 'keepId'");
+    }
+
+    @Test
+    void typeMismatchNamesThePublicParameterWithoutConversionInternals() throws Exception {
+        MethodParameter parameter = new MethodParameter(
+                GlobalExceptionHandlerTest.class.getMethod("dummyMethod", String.class), 0);
+        MethodArgumentTypeMismatchException exception = new MethodArgumentTypeMismatchException(
+                "not-a-number", Long.class, "equipmentId", parameter, new NumberFormatException("secret"));
+
+        ResponseEntity<ApiErrorResponse> response = handler.handleTypeMismatch(exception, request);
+
+        assertError(response, HttpStatus.BAD_REQUEST, "Invalid value for parameter 'equipmentId'");
+    }
+
+    @Test
+    void unsupportedMethodRetainsProtocolStatus() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleMethodNotSupported(
+                new HttpRequestMethodNotSupportedException("TRACE"), request);
+
+        assertError(response, HttpStatus.METHOD_NOT_ALLOWED, "Request method is not supported");
+    }
+
+    @Test
+    void unsupportedMediaTypeRetainsProtocolStatus() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleMediaTypeNotSupported(
+                new HttpMediaTypeNotSupportedException("application/x-java-object"), request);
+
+        assertError(response, HttpStatus.UNSUPPORTED_MEDIA_TYPE, "Content type is not supported");
+    }
+
+    @Test
+    void dataIntegrityFailuresReturnSanitizedConflict() {
+        ResponseEntity<ApiErrorResponse> response = handler.handlePersistenceConflict(
+                new DataIntegrityViolationException(
+                        "Unique index violation on USERS(EMAIL) values ('patient@example.org')"), request);
+
+        assertError(response, HttpStatus.CONFLICT,
+                "The request conflicts with the current resource state");
+        assertFalse(response.getBody().getMessage().contains("patient@example.org"));
+    }
+
+    @Test
+    void optimisticLockFailuresReturnSanitizedConflict() {
+        ResponseEntity<ApiErrorResponse> response = handler.handlePersistenceConflict(
+                new OptimisticLockException("Version 7 was stale for equipment 42"), request);
+
+        assertError(response, HttpStatus.CONFLICT,
+                "The request conflicts with the current resource state");
+        assertFalse(response.getBody().getMessage().contains("Version 7"));
+    }
+
+    @Test
+    void unexpectedRuntimeFailureReturnsSanitizedInternalServerError() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleRuntimeException(
+                new NullPointerException("Cannot invoke repository.save because connectionPool is null"), request);
+
+        assertError(response, HttpStatus.INTERNAL_SERVER_ERROR, "An unexpected error occurred");
+        assertFalse(response.getBody().getMessage().contains("connectionPool"));
+    }
+
+    @Test
+    void checkedFailureReturnsSameSanitizedInternalServerError() {
+        ResponseEntity<ApiErrorResponse> response = handler.handleGeneralException(
+                new Exception("Filesystem path /private/medtrack/export.csv is unavailable"), request);
+
+        assertError(response, HttpStatus.INTERNAL_SERVER_ERROR, "An unexpected error occurred");
+        assertFalse(response.getBody().getMessage().contains("/private/medtrack"));
+    }
+
+    @Test
+    void correlationIdIsOptionalOutsideAFilteredRequest() {
+        MDC.clear();
+
+        ResponseEntity<ApiErrorResponse> response = handler.handleRuntimeException(
+                new RuntimeException("internal detail"), request);
+
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals("An unexpected error occurred", response.getBody().get("message"));
+        assertNull(response.getBody().getCorrelationId());
+    }
+
+    private void assertError(
+            ResponseEntity<ApiErrorResponse> response, HttpStatus expectedStatus, String expectedMessage) {
+        assertEquals(expectedStatus, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertNotNull(response.getBody().getTimestamp());
+        assertEquals(expectedStatus.value(), response.getBody().getStatus());
+        assertEquals(expectedStatus.getReasonPhrase(), response.getBody().getError());
+        assertEquals(expectedMessage, response.getBody().getMessage());
+        assertEquals("/api/equipment/42", response.getBody().getPath());
+        assertEquals(CORRELATION_ID, response.getBody().getCorrelationId());
     }
 }
